--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby": "^2.26.1",
     "gatsby-plugin-manifest": "^2.7.0",
     "gatsby-plugin-scroll-reveal": "0.0.7",
+    "gatsby-plugin-styled-components": "^3.7.0",
     "gatsby-source-filesystem": "^2.6.0",
     "gatsby-source-prismic": "^3.2.1",
     "gatsby-transformer-remark": "^2.11.0",
