--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "chesteryee.com",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
@@ -11,7 +10,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "eslint --fix '**/*.js'"
   },
   "dependencies": {
     "framer-motion": "^2.9.4",
@@ -31,6 +30,9 @@
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
+    "eslint": "^7.16.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.21.5",
     "prettier": "2.1.2"
   },
   "repository": {
