--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^2.9.4",
     "gatsby": "^2.26.1",
     "gatsby-plugin-manifest": "^2.7.0",
+    "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-scroll-reveal": "0.0.7",
     "gatsby-plugin-styled-components": "^3.7.0",
     "gatsby-source-filesystem": "^2.6.0",
@@ -23,10 +24,12 @@
     "gatsby-transformer-remark": "^2.11.0",
     "gsap": "^3.5.1",
     "hamburgers": "^1.1.3",
+    "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-burger-menu": "^2.9.2",
     "react-dom": "^16.12.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "swiper": "^6.4.5"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
