--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chesteryee.com",
   "private": true,
-  "version": "0.1.0",
+  "version": "1.0.0",
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
@@ -23,26 +23,18 @@
     "gatsby-source-prismic": "^3.2.1",
     "gatsby-transformer-remark": "^2.11.0",
     "gsap": "^3.5.1",
-    "hamburgers": "^1.1.3",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-burger-menu": "^2.9.2",
     "react-dom": "^16.12.0",
+    "react-intersection-observer": "^8.31.0",
     "styled-components": "^5.2.1",
     "swiper": "^6.4.5"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
     "eslint": "^7.16.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-config-prettier": "^7.1.0",
     "prettier": "2.1.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
