--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^2.9.4",
     "gatsby": "^2.26.1",
     "gatsby-plugin-manifest": "^2.7.0",
+    "gatsby-plugin-react-helmet": "^3.9.0",
     "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-scroll-reveal": "0.0.7",
     "gatsby-plugin-styled-components": "^3.7.0",
@@ -27,6 +28,7 @@
     "react": "^16.12.0",
     "react-burger-menu": "^2.9.2",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.31.0",
     "styled-components": "^5.2.1",
     "swiper": "^6.4.5"
