--- a/package.json
+++ b/package.json
@@ -15,21 +15,26 @@
   "dependencies": {
     "framer-motion": "^2.9.4",
     "gatsby": "^2.26.1",
+    "gatsby-image": "^2.11.0",
     "gatsby-plugin-manifest": "^2.7.0",
     "gatsby-plugin-react-helmet": "^3.9.0",
     "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-scroll-reveal": "0.0.7",
+    "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-plugin-styled-components": "^3.7.0",
     "gatsby-source-filesystem": "^2.6.0",
     "gatsby-source-prismic": "^3.2.1",
     "gatsby-transformer-remark": "^2.11.0",
+    "gatsby-transformer-sharp": "^2.12.0",
     "gsap": "^3.5.1",
+    "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-burger-menu": "^2.9.2",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.31.0",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.2.1",
     "swiper": "^6.4.5"
   },
