--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.31.0",
+    "react-parallax": "^3.2.0",
     "react-spring": "^8.0.27",
     "styled-components": "^5.2.1",
     "swiper": "^6.4.5"
