--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "gsap": "^3.5.1",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
+    "prismic-reactjs": "^1.3.3",
     "react": "^16.12.0",
     "react-burger-menu": "^2.9.2",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.31.0",
+    "react-markdown": "^5.0.3",
     "react-parallax": "^3.2.0",
     "react-spring": "^8.0.27",
     "styled-components": "^5.2.1",
