--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "react-burger-menu": "^2.9.2",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "react-intersection-observer": "^8.31.0",
+    "react-intersection-observer": "^8.32.0",
     "react-markdown": "^5.0.3",
     "react-parallax": "^3.2.0",
     "react-spring": "^8.0.27",
     "styled-components": "^5.2.1",
+    "styled-system": "^5.1.5",
     "swiper": "^6.4.5"
   },
   "devDependencies": {
